change language based on the lang query and shared header between styles & disable bots (nobots)
Signed-off-by: Jamal Abo Mokh <jamalabomokh490@gmail.com>

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -34,14 +34,7 @@
 	"computer_skills.skill_5": "חיפוש מתקדם באינטרנט",
 	"computer_skills.skill_6": "תמלול",
 	"computer_skills.skill_7": "בניית אתרים",
-	"section_skills_skills": "مهارات حياتيه",
-	"section_skills_computer": "مهارات حاسوب",
-	"section_skills_experiences": "الخبرات والمهارات",
-	"computer_skills.skill_14": "computer_skills.skill_14",
-	"computer_skills.skill_13": "computer_skills.skill_13",
-	"computer_skills.skill_12": "computer_skills.skill_12",
-	"computer_skills.skill_10": "computer_skills.skill_10",
-	"computer_skills.skill_9": "computer_skills.skill_9",
-	"computer_skills.skill_8": "computer_skills.skill_8",
-	"computer_skills.skill_11": "computer_skills.skill_11"
+	"section_skills_skills": "כישורי חיים",
+	"section_skills_computer": "מיומנויות מחשב",
+	"section_skills_experiences": "חוויות ומיומנויות"
 }
