--- a/locales/he.json
+++ b/locales/he.json
@@ -1,1 +1,40 @@
-{}
+{
+  "navBar_print": "הדפס",
+  "personal_phoneNumber": "מספר הטלפון",
+  "personal_email": "דואר אלקטרוני",
+  "section_personal_detail_title": "מידע פרטי",
+  "section_personal_detail_name": "השם",
+  "section_personal_detail_birth_day": "תאריך לידה",
+  "section_personal_detail_identity": "מספר תעודת זהות",
+  "section_personal_detail_city": "העיירה",
+  "section_language_experiences_title": "חוויות שפה",
+  "section_language_experiences_language.arabic": "הערבית",
+  "section_language_experiences_language.english": "האנגלית",
+  "section_language_experiences_language.hebrew": "עברית",
+  "section_experience_work": "חוויות עבודה",
+  "section_experience_volunteer": "התנסויות בהתנדבות",
+  "skills.skill_1": "כושר מכני-טכני",
+  "skills.skill_2": "סקרנות מדעית",
+  "skills.skill_3": "חשיבה יצירתית",
+  "skills.skill_4": "יכולת יצירת קשר בין-אישי",
+  "skills.skill_5": "כושר שכנוי במשא ומתן",
+  "skills.skill_6": "כתיבה יצירתית",
+  "skills.skill_7": "כושר פקידותי - סדר,ארגון וקפדנות",
+  "skills.skill_8": "מיומנות בביצוע עבודות ידיים",
+  "skills.skill_9": "חשיבה מתמטית",
+  "skills.skill_10": "כישרון אמנותי (מוזיקה או ציור וכד)",
+  "skills.skill_11": "יכולת הבנת הזולת ויכולת קבלה",
+  "skills.skill_12": "כושר מנהיגותי, יכולת הובלה",
+  "skills.skill_13": "מיומנות בעבודות משרדיות",
+  "skills.skill_14": "עבודה בצוות",
+  "computer_skills.skill_1": "אופיס",
+  "computer_skills.skill_2": "עריכת מדיה",
+  "computer_skills.skill_3": "עיצוב",
+  "computer_skills.skill_4": "תכנות",
+  "computer_skills.skill_5": "חיפוש מתקדם באינטרנט",
+  "computer_skills.skill_6": "תמלול",
+  "computer_skills.skill_7": "בניית אתרים",
+  "section_skills_skills": "مهارات حياتيه",
+  "section_skills_computer": "مهارات حاسوب",
+  "section_skills_experiences": "الخبرات والمهارات"
+}
