--- a/locales/ar.json
+++ b/locales/ar.json
@@ -34,7 +34,7 @@
 	"computer_skills.skill_5": "חיפוש מתקדם באינטרנט",
 	"computer_skills.skill_6": "תמלול",
 	"computer_skills.skill_7": "בניית אתרים",
-	"section_skills_skills": "כישורי חיים",
-	"section_skills_computer": "מיומנויות מחשב",
-	"section_skills_experiences": "חוויות ומיומנויות"
+	"section_skills_skills": "مهارات حياتيه",
+	"section_skills_computer": "مهارات حاسوب",
+	"section_skills_experiences": "الخبرات والمهارات"
 }
