upgrade to match API Version fix locales
Signed-off-by: Jamal Abo Mokh <jamalabomokh490@gmail.com>

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,40 +1,41 @@
 {
-	"navBar_print": "طباعه",
-	"personal_phoneNumber": "رقم الهاتف",
-	"personal_email": "البريد الإلكتروني",
-	"section_personal_detail_title": "المعلومات الخاصه",
-	"section_personal_detail_name": "الإسم",
-	"section_personal_detail_birth_day": "تاريخ الميلاد",
-	"section_personal_detail_identity": "رقم الهويه",
-	"section_personal_detail_city": "البلده",
-	"section_language_experiences_title": "خبرات اللغات",
-	"section_language_experiences_language.arabic": "العربيه",
-	"section_language_experiences_language.english": "الإنجليزيه",
-	"section_language_experiences_language.hebrew": "العبريه",
-	"section_experience_work": "خبرات العمل",
-	"section_experience_volunteer": "خبرات التطوع",
-	"skills.skill_1": "مهارة تقنية _ ميكانيكية",
-	"skills.skill_2": "الفضول العلمي",
-	"skills.skill_3": "التفكير الإبداعي",
-	"skills.skill_4": "القدرة على التواصل مع الاخرين",
-	"skills.skill_5": "مهارة الاقناع",
-	"skills.skill_6": "مهارة الكتابة",
-	"skills.skill_7": "مهارة نظام، تنظيم ودقة",
-	"skills.skill_8": "مهارة الصنع اليدوي",
-	"skills.skill_9": "التفكير الرياضي/الحسابي",
-	"skills.skill_10": "موهبة فنية (موسيقى أو رسم ، إلخ)",
-	"skills.skill_11": "القدرة على فهم وتقبل الآخرين",
-	"skills.skill_12": "مهارت قيادية",
-	"skills.skill_13": "إدارة المكتب والسكرتارية",
-	"skills.skill_14": "العمل الجماعي",
-	"computer_skills.skill_1": "אופיס",
-	"computer_skills.skill_2": "עריכת מדיה",
-	"computer_skills.skill_3": "עיצוב",
-	"computer_skills.skill_4": "תכנות",
-	"computer_skills.skill_5": "חיפוש מתקדם באינטרנט",
-	"computer_skills.skill_6": "תמלול",
-	"computer_skills.skill_7": "בניית אתרים",
-	"section_skills_skills": "مهارات حياتيه",
-	"section_skills_computer": "مهارات حاسوب",
-	"section_skills_experiences": "الخبرات والمهارات"
+  "navBar_print": "طباعه",
+  "personal_phoneNumber": "رقم الهاتف",
+  "personal_email": "البريد الإلكتروني",
+  "section_personal_detail_title": "المعلومات الخاصه",
+  "section_personal_detail_name": "الإسم",
+  "section_personal_detail_birth_day": "تاريخ الميلاد",
+  "section_personal_detail_school_name": "اسم المدرسه",
+  "section_personal_detail_identity": "رقم الهويه",
+  "section_personal_detail_city": "البلده",
+  "section_language_experiences_title": "خبرات اللغات",
+  "section_language_experiences_language.arabic": "العربيه",
+  "section_language_experiences_language.english": "الإنجليزيه",
+  "section_language_experiences_language.hebrew": "العبريه",
+  "section_experience_work": "خبرات العمل",
+  "section_experience_volunteer": "خبرات التطوع",
+  "skills.skill_1": "مهارة تقنية - ميكانيكية",
+  "skills.skill_2": "الفضول العلمي",
+  "skills.skill_3": "التفكير الإبداعي",
+  "skills.skill_4": "القدرة على التواصل مع الاخرين",
+  "skills.skill_5": "مهارة الاقناع",
+  "skills.skill_6": "مهارة الكتابة",
+  "skills.skill_7": "مهارة نظام، تنظيم ودقة",
+  "skills.skill_8": "مهارة الصنع اليدوي",
+  "skills.skill_9": "التفكير الرياضي/الحسابي",
+  "skills.skill_10": "موهبة فنية (موسيقى أو رسم ، إلخ)",
+  "skills.skill_11": "القدرة على فهم وتقبل الآخرين",
+  "skills.skill_12": "مهارت قيادية",
+  "skills.skill_13": "إدارة المكتب والسكرتارية",
+  "skills.skill_14": "العمل الجماعي",
+  "computer-skills.skill_1": "مكتب",
+  "computer-skills.skill_2": "تحرير الفيديوهات",
+  "computer-skills.skill_3": "التصميم",
+  "computer-skills.skill_4": "برمجه",
+  "computer-skills.skill_5": "بحث متقدم على الإنترنت",
+  "computer-skills.skill_6": "نسخ",
+  "computer-skills.skill_7": "تطوير المواقع",
+  "section_skills_skills": "مهارات حياتيه",
+  "section_skills_computer": "مهارات حاسوب",
+  "section_skills_experiences": "الخبرات والمهارات"
 }
