--- a/locales/he.json
+++ b/locales/he.json
@@ -5,14 +5,15 @@
   "section_personal_detail_title": "מידע פרטי",
   "section_personal_detail_name": "השם",
   "section_personal_detail_birth_day": "תאריך לידה",
-  "section_personal_detail_identity": "מספר תעודת זהות",
-  "section_personal_detail_city": "העיירה",
+  "section_personal_detail_school_name": "תיכון",
+  "section_personal_detail_city": "יישוב",
+  "section_personal_detail_identity": "ת.ז",
   "section_language_experiences_title": "חוויות שפה",
-  "section_language_experiences_language.arabic": "הערבית",
-  "section_language_experiences_language.english": "האנגלית",
+  "section_language_experiences_language.arabic": "ערבית",
+  "section_language_experiences_language.english": "אנגלית",
   "section_language_experiences_language.hebrew": "עברית",
-  "section_experience_work": "חוויות עבודה",
-  "section_experience_volunteer": "התנסויות בהתנדבות",
+  "section_experience_work": "עבודות",
+  "section_experience_volunteer": "התנדבויות",
   "skills.skill_1": "כושר מכני-טכני",
   "skills.skill_2": "סקרנות מדעית",
   "skills.skill_3": "חשיבה יצירתית",
@@ -27,13 +28,13 @@
   "skills.skill_12": "כושר מנהיגותי, יכולת הובלה",
   "skills.skill_13": "מיומנות בעבודות משרדיות",
   "skills.skill_14": "עבודה בצוות",
-  "computer_skills.skill_1": "אופיס",
-  "computer_skills.skill_2": "עריכת מדיה",
-  "computer_skills.skill_3": "עיצוב",
-  "computer_skills.skill_4": "תכנות",
-  "computer_skills.skill_5": "חיפוש מתקדם באינטרנט",
-  "computer_skills.skill_6": "תמלול",
-  "computer_skills.skill_7": "בניית אתרים",
+  "computer-skills.skill_1": "אופיס",
+  "computer-skills.skill_2": "עריכת מדיה",
+  "computer-skills.skill_3": "עיצוב",
+  "computer-skills.skill_4": "תכנות",
+  "computer-skills.skill_5": "חיפוש מתקדם באינטרנט",
+  "computer-skills.skill_6": "תמלול",
+  "computer-skills.skill_7": "בניית אתרים",
   "section_skills_skills": "כישורי חיים",
   "section_skills_computer": "מיומנויות מחשב",
   "section_skills_experiences": "חוויות ומיומנויות"
